# comptesperso_dbt_sf

./: .gitignore  Readme.md  pyproject.toml  requirements.txt  upload_file.py  upload_file.sh  upload_latest_excel_to_sf_main.sh
.github/: CODEOWNERS
.github/workflows/: echoenv.yml  github_actions_python.yml  on_pr_closed_to_master_merge_back_to_qa.yml  on_pull_to_main_publish_to_testpypi.yml  on_push_run_pytest.yml  staging_functions.yml
archive/: _sources_schema.yml
comptesperso_dbt_sf/: dbt_project.yml  packages.yml
comptesperso_dbt_sf/analyses/: Checklist_possible_analysis.md  finanzguru_category_not_in_category_tree.sql
comptesperso_dbt_sf/seeds/: accounts.csv  categorytree.csv  income_expense_german_to_english.csv  recurrence_german_to_english.csv  transaction_type_german_to_english.csv
corrections/: find_umbuchung.py  review_manual_counting.py  self_cancelling_transactions.csv  transaction_id_details.csv  update_corrections.bash  upload_corrections.py
corrections/archive/: self_cancelling_transactions.csv
hierarchy/: categorytree.yml  categorytree_with_ids.yml  yml_to_csv.py
staging/: create_stage.sql  read_finanzguru_extract.py  requirements.txt
staging/src/: __init__.py  load_environment_variables.py  read_finanzguru_extract.py
staging/tests/: 20221210-Export-Alle_Buchungen.xlsx  test_environment_variables.py  test_read_finanzguru_extract.py
stagingfinanzgurutosf/: README.md  __init__.py  pyproject.toml  requirements.txt
stagingfinanzgurutosf/src/: __init__.py  sf_utils.py  (+3 more)
tests/: test_read_finanzguru_extract.py  test_sf_workflow.py
(+41 files in other folders)
